--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: Download workflow artifact
+name: LNRS - Download workflow artifact
 description: Download and extract an artifact associated with given workflow and commit
 author: dawidd6
 branding:
